# Bootcamp_fastapi_assignment

./: pyproject.toml
Docs/: 0. Objective.md  0. Table of Contents.md  1. Fast API 란?.md  10. Errors.md  10. html 상태코드 (오류).md  11. Fields.md  12. 중첩모델.md  13. 모델을 리스트로 사용하기.md  14. API 문서 꾸미기(Swagger).md  15. 헤더 매개변수.md  16. 쿠키.md  17.  app.get 한장 정리.md  18. Response Model.md  19. .env 파일과 python-dotenv.md  2. Poetry.md  20. 패키지 구조 (예시).md  21. Pydantic-settings.md  22. Black.md  23. Mypy.md  24. Ruff.md  25. pyproject.toml 관리.md  26. DB (MySQL, PostgreSQL, MongoDB).md  27. Docker.md  28. Dockerfile.md  29. docker-compose.yml.md  3. Uvicorn 서버.md  30. ORM.md  31. Docker 실행 정리.md  32. <Troubleshooting> Docker 연결오류.md  33. 비동기 연동 단계.md  34. model.py.md  35. ORM 필드타입.md  36. Aerich.md  4. 경로 매개변수.md  5. 쿼리 매개변수.md  6. 경로 & 쿼리 매개변수 동시 사용.md  7. Pydantic과 요청 본문.md  8. DTO vs DICT.md  9. Pydentic 모델 정의하기.md  Day 1 Black.md  (+13 more)
fastapi-app/: .env  .gitignore  Dockerfile  aerich.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fastapi-app/app/: config.py  main.py  models.py  tortoise_config.py
